updated column-gaps and header heirarchy, fixed issue in safari with position, added project descriptions

--- a/styles/sass/base/_global.scss
+++ b/styles/sass/base/_global.scss
@@ -1,4 +1,4 @@
-$colour-transition-duration: 1.2s;
+$colour-transition-duration: 1s;
 $link-btn-hover-opacity: 0.7;
 
 body {
@@ -6,7 +6,6 @@ body {
   font: $light $body-copy-size/1.5 $font;
   color: var(--text-colour);
   letter-spacing: 1px;
-  transition: color $colour-transition-duration $easeInOutCubic;
 }
 
 body::before {
@@ -22,14 +21,14 @@ body::before {
   transition: height 1s $easeInOutCubic;
 }
 
-h2 {
+h3 {
   font-size: $h2-size;
   font-weight: $semi-bold;
   line-height: 1.2;
   margin-bottom: $links-size;
 }
 
-h3 {
+h4 {
   font-size: $h3-size;
   font-weight: $semi-bold;
   text-transform: uppercase;
