--- a/styles/sass/layouts/_index.scss
+++ b/styles/sass/layouts/_index.scss
@@ -5,6 +5,7 @@ main {
 }
 
 .unset-overflow main {
+  position: unset;
   overflow-y: scroll;
 }
 
