--- a/styles/style.css
+++ b/styles/style.css
@@ -237,8 +237,6 @@ body {
   font: 300 0.91667rem "Prompt", sans-serif;
   color: var(--text-colour);
   letter-spacing: 1px;
-  -webkit-transition: color 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: color 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 body::before {
@@ -255,14 +253,14 @@ body::before {
   transition: height 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-h2 {
+h3 {
   font-size: 2.324rem;
   font-weight: 600;
   line-height: 1.2;
   margin-bottom: 0.814rem;
 }
 
-h3 {
+h4 {
   font-size: 1.058rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -280,8 +278,8 @@ a {
   font-weight: 600;
   text-decoration: none;
   text-transform: uppercase;
-  -webkit-transition: color 1.2s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.4s ease-in-out;
-  transition: color 1.2s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.4s ease-in-out;
+  -webkit-transition: color 1s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.4s ease-in-out;
+  transition: color 1s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.4s ease-in-out;
 }
 
 a:hover, a:focus {
@@ -320,8 +318,8 @@ button {
   background-color: unset;
   display: inline-block;
   color: var(--text-colour);
-  -webkit-transition: opacity 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: opacity 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transition: opacity 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: opacity 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 button:hover, button:focus {
@@ -417,8 +415,8 @@ footer p {
 
 .dark-logo {
   opacity: 1;
-  -webkit-transition: opacity 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: opacity 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transition: opacity 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: opacity 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .light-logo {
@@ -471,6 +469,7 @@ main {
 }
 
 .unset-overflow main {
+  position: unset;
   overflow-y: scroll;
 }
 
@@ -529,8 +528,16 @@ main {
   -webkit-box-align: first baseline;
       -ms-flex-align: first baseline;
           align-items: first baseline;
-  -webkit-column-gap: 1.375rem;
-          column-gap: 1.375rem;
+  -webkit-column-gap: 1.058rem;
+          column-gap: 1.058rem;
+}
+
+.project-header > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 0.626rem;
+          column-gap: 0.626rem;
 }
 
 .img-container {
